# repo2agent

./: .gitignore  README.md  pyproject.toml
repo2agent/: analyzer.py  cli.py  config_parser.py  deep_scanner.py  generator.py  llm_polisher.py  models.py  scanner.py
repo2agent/templates/: agents.md.j2  claude.md.j2  contributing.md.j2  copilot-instructions.md.j2  cursorrules.j2
repo2agent/templates/zh/: agents.md.j2  claude.md.j2  contributing.md.j2  copilot-instructions.md.j2  cursorrules.j2
tests/: test_analyzer.py  test_cli.py  test_config_parser.py  test_deep_scanner.py  test_generator.py  test_integration.py  test_llm_polisher.py  test_models.py  test_scanner.py
tests/fixtures/go_project/: go.mod  main.go
tests/fixtures/js_project/: package.json
tests/fixtures/js_project/src/: index.js
tests/fixtures/python_project/: README.md  pyproject.toml
tests/fixtures/python_project/src/: main.py
tests/fixtures/python_project/tests/: test_main.py
