[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo2agent"
version = "0.1.0"
description = "Convert any code repository into an agent-ready project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "pathspec>=0.11",
]

[project.optional-dependencies]
deep = [
    "tree-sitter>=0.20",
    "tree-sitter-python>=0.20",
    "tree-sitter-javascript>=0.20",
    "tree-sitter-typescript>=0.20",
]
llm = [
    "anthropic>=0.20",
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
repo2agent = "repo2agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
